--- a/app/design/frontend/enterprise/iphone/Enterprise_GiftRegistry/customer/list.phtml
+++ b/app/design/frontend/enterprise/iphone/Enterprise_GiftRegistry/customer/list.phtml
@@ -1,32 +1,16 @@
 <?php
 /**
- * Magento Enterprise Edition
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Magento Enterprise Edition License
- * that is bundled with this package in the file LICENSE_EE.txt.
- * It is also available through the world-wide-web at this URL:
- * http://www.magentocommerce.com/license/enterprise-edition
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * {license_notice}
  *
  * @category    design
  * @package     enterprise_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://www.magentocommerce.com/license/enterprise-edition
+ * @copyright   {copyright}
+ * @license     {license_link}
  */
 ?>
 
 <div class="page-title">
-    <h1><?php echo Mage::helper('enterprise_giftregistry')->__('Gift Registry'); ?></h1>
+    <h1><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Gift Registry'); ?></h1>
 </div>
 <?php $entityCollection = $this->getEntityCollection(); ?>
 <?php echo $this->getMessagesBlock()->getGroupedHtml();?>
@@ -37,15 +21,15 @@
         <?php foreach($entityCollection as $item): ?>
             <tbody>
                 <tr>
-                    <th><?php echo Mage::helper('enterprise_giftregistry')->__('Event'); ?></th>
-                    <td title="<?php echo $this->getEscapedTitle($item)?>"><?php echo $this->helper('core/string')->truncate($this->getEscapedTitle($item), 70)?></td>
+                    <th><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Event'); ?></th>
+                    <td title="<?php echo $this->getEscapedTitle($item)?>"><?php echo $this->helper('Mage_Core_Helper_String')->truncate($this->getEscapedTitle($item), 70)?></td>
                 </tr>
                 <tr>
-                    <th><span class="nobr"><?php echo Mage::helper('enterprise_giftregistry')->__('Created On'); ?></span></th>
+                    <th><span class="nobr"><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Created On'); ?></span></th>
                     <td><span class="nobr"><?php echo $this->getFormattedDate($item) ?></span></td>
                 </tr>
                 <tr>
-                    <th><?php echo Mage::helper('enterprise_giftregistry')->__('Message'); ?></th>
+                    <th><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Message'); ?></th>
                     <td><?php echo $this->getEscapedMessage($item)?></td>
                 </tr>
                 </tr>
@@ -55,7 +39,7 @@
                             <a href="<?php echo $this->getItemsUrl($item)?>"><?php echo $this->__('Manage Items') ?></a> <span class="separator">|</span>
                             <a href="<?php echo $this->getShareUrl($item)?>"><?php echo $this->__('Share') ?></a> <span class="separator">|</span>
                             <a href="<?php echo $this->getEditUrl($item)?>"><?php echo $this->__('Edit') ?></a> <span class="separator">|</span>
-                            <a href="<?php echo $this->getDeleteUrl($item)?>" onclick="return confirm('<?php echo Mage::helper('enterprise_giftregistry')->__('Are you sure you want to delete this gift registry?'); ?>');"><?php echo $this->__('Delete') ?></a>
+                            <a href="<?php echo $this->getDeleteUrl($item)?>" onclick="return confirm('<?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('Are you sure you want to delete this gift registry?'); ?>');"><?php echo $this->__('Delete') ?></a>
                         </span>
                     </td>
                 </tr>
@@ -64,7 +48,7 @@
     </table>
     <?php echo $this->getChildHtml('pager') ?>
 <?php else:?>
-    <p><?php echo Mage::helper('enterprise_giftregistry')->__('There are no created gift registries yet.'); ?></p>
+    <p><?php echo Mage::helper('Enterprise_GiftRegistry_Helper_Data')->__('There are no created gift registries yet.'); ?></p>
 <?php endif;?>
 
 <div class="buttons-set">
