--- a/app/design/frontend/enterprise/iphone/Mage_Checkout/cart/item/failed.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Checkout/cart/item/failed.phtml
@@ -1,27 +1,11 @@
 <?php
 /**
- * Magento Enterprise Edition
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Magento Enterprise Edition License
- * that is bundled with this package in the file LICENSE_EE.txt.
- * It is also available through the world-wide-web at this URL:
- * http://www.magentocommerce.com/license/enterprise-edition
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * {license_notice}
  *
  * @category    design
- * @package     enterprise_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://www.magentocommerce.com/license/enterprise-edition
+ * @package     default_iphone
+ * @copyright   {copyright}
+ * @license     {license_link}
  */
 
 /**
@@ -30,7 +14,7 @@
 
 /** @var $this Mage_Checkout_Block_Cart_Item_Renderer */
 $_item = $this->getItem();
-$displayBothPrices = $this->helper('tax')->displayCartBothPrices();
+$displayBothPrices = $this->helper('Mage_Tax_Helper_Data')->displayCartBothPrices();
 $additionalInfoBlock = $this->getProductAdditionalInformationBlock();
 ?>
 <tr>
@@ -47,7 +31,7 @@ $additionalInfoBlock = $this->getProductAdditionalInformationBlock();
         <?php endif; ?>
     </td>
     <td class="a-center"></td>
-    <?php if ($this->helper('wishlist')->isAllowInCart()) : ?><td class="a-center"></td><?php endif ?>
+    <?php if ($this->helper('Mage_Wishlist_Helper_Data')->isAllowInCart()) : ?><td class="a-center"></td><?php endif ?>
     <td class="a-right"<?php if ($displayBothPrices): ?> colspan="2"<?php endif; ?>></td>
     <td class="a-center">
         <input name="cart[<?php echo $_item->getId() ?>][qty]" value="<?php echo $this->getQty() ?>" size="4" title="<?php echo $this->__('Qty') ?>" class="input-text qty disabled" maxlength="12" disabled="disabled" />
