--- a/app/design/frontend/enterprise/iphone/Mage_Checkout/onepage/review/info.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Checkout/onepage/review/info.phtml
@@ -1,27 +1,11 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * {license_notice}
  *
  * @category    design
  * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @copyright   {copyright}
+ * @license     {license_link}
  */
 ?>
 <?php echo $this->getChildHtml('items_before'); ?>
@@ -38,13 +22,13 @@
                 <th class="a-center"><?php echo $this->__('Qty') ?></th>
                 <th class="a-center"><?php echo $this->__('Subtotal') ?></th>
             </tr>
-            <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
+            <?php if ($this->helper('Mage_Tax_Helper_Data')->displayCartBothPrices()): ?>
                 <!--
                 <tr>
-                    <th class="a-right"><?php echo $this->helper('tax')->getIncExcTaxLabel(false) ?></th>
-                    <th><?php echo $this->helper('tax')->getIncExcTaxLabel(true) ?></th>
-                    <th class="a-right"><?php echo $this->helper('tax')->getIncExcTaxLabel(false) ?></th>
-                    <th><?php echo $this->helper('tax')->getIncExcTaxLabel(true) ?></th>
+                    <th class="a-right"><?php echo $this->helper('Mage_Tax_Helper_Data')->getIncExcTaxLabel(false) ?></th>
+                    <th><?php echo $this->helper('Mage_Tax_Helper_Data')->getIncExcTaxLabel(true) ?></th>
+                    <th class="a-right"><?php echo $this->helper('Mage_Tax_Helper_Data')->getIncExcTaxLabel(false) ?></th>
+                    <th><?php echo $this->helper('Mage_Tax_Helper_Data')->getIncExcTaxLabel(true) ?></th>
                 </tr>
                 -->
             <?php endif; ?>
