--- a/app/design/frontend/enterprise/iphone/Mage_Customer/form/register.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Customer/form/register.phtml
@@ -1,27 +1,11 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * {license_notice}
  *
  * @category    design
  * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @copyright   {copyright}
+ * @license     {license_link}
  */
 ?>
 <?php
@@ -85,7 +69,7 @@
                                 <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getFormData()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text required-entry" />
                             </div>
                         </li>
-                    <?php for ($_i=2, $_n=$this->helper('customer/address')->getStreetLines(); $_i<=$_n; $_i++): ?>
+                    <?php for ($_i=2, $_n=$this->helper('Mage_Customer_Helper_Address')->getStreetLines(); $_i<=$_n; $_i++): ?>
                         <li class="wide">
                             <div class="input-box">
                                 <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getFormData()->getStreet($_i)) ?>" title="<?php echo $this->__('Street Address %s', $_i) ?>" id="street_<?php echo $_i?>" class="input-text" />
@@ -135,15 +119,15 @@
             <?php endif; ?>
             <div class="fieldset">
                 <ul class="form-list">
-                <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
+                <?php $_dob = $this->getLayout()->createBlock('Mage_Customer_Block_Widget_Dob') ?>
                 <?php if ($_dob->isEnabled()): ?>
                     <li><?php echo $_dob->setDate($this->getFormData()->getDob())->toHtml() ?></li>
                 <?php endif ?>
-                <?php $_taxvat = $this->getLayout()->createBlock('customer/widget_taxvat') ?>
+                <?php $_taxvat = $this->getLayout()->createBlock('Mage_Customer_Block_Widget_Taxvat') ?>
                 <?php if ($_taxvat->isEnabled()): ?>
                     <li><?php echo $_taxvat->setTaxvat($this->getFormData()->getTaxvat())->toHtml() ?></li>
                 <?php endif ?>
-                <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
+                <?php $_gender = $this->getLayout()->createBlock('Mage_Customer_Block_Widget_Gender') ?>
                 <?php if ($_gender->isEnabled()): ?>
                     <li><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
                 <?php endif ?>
@@ -160,7 +144,7 @@
                         <label for="confirmation"><?php echo $this->__('Confirm password') ?>:</label>
                         <input type="password" name="confirmation" id="confirmation" class="required-entry validate-cpassword" placeholder="<?php echo $this->__('Confirm Password') ?>" />
                     </li>
-                    <?php if (Mage::helper('core/captcha')->isRequired('user_create')): ?>
+                    <?php if (Mage::helper('Mage_Core_Helper_Captcha')->isRequired('user_create')): ?>
                         <?php echo $this->getChildHtml('captcha') ?>
                     <?php endif ?>
                 </ul>
@@ -174,7 +158,7 @@
 //<![CDATA[
     var dataForm = new VarienForm('form-validate', true);
     <?php if($this->getShowAddressFields()): ?>
-    new RegionUpdater('country', 'region', 'region_id', <?php echo $this->helper('directory')->getRegionJson() ?>, undefined, 'zip');
+    new RegionUpdater('country', 'region', 'region_id', <?php echo $this->helper('Mage_Directory_Helper_Data')->getRegionJson() ?>, undefined, 'zip');
     <?php endif; ?>
 //]]>
 </script>
