Fixed MAGE-6283: Unsafe Method Culling in a Block of RMA

--- a/app/design/frontend/enterprise/default/template/rma/return/tracking.phtml
+++ b/app/design/frontend/enterprise/default/template/rma/return/tracking.phtml
@@ -54,7 +54,8 @@
         <?php endif ?>
     </td>
 </tr>
-<?php endforeach ?>
+<?php endforeach; ?>
+<?php if ($this->isPrintShippingLabelAllowed()): ?>
 <script type="text/javascript">
 //<![CDATA[
     function deleteTrackNumber(number) {
@@ -65,10 +66,11 @@
                     $('rma-please-wait').hide();
                     decorateTable('track-info-table');
                 },
-                parameters : {number: number}
+                parameters: {number: number}
             });
         }
         return false;
     }
 //]]>
 </script>
+<?php endif; ?>
