Fixed APIA-450: Make CR Changes in API branch after core team CR - rename OAuth module to Oauth according to ZF coding standard. Without files and folders renaming

--- a/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
@@ -25,7 +25,7 @@
  */
 
 /**
- * Head block OAuth simple pages
+ * Head block Oauth simple pages
  *
  * @var $this Mage_Adminhtml_Block_Page_Head
  */
