Fixed MAGE-4293: Grammar Issues reported by community

--- a/app/design/frontend/base/default/template/amazonpayments/cba/success.phtml
+++ b/app/design/frontend/base/default/template/amazonpayments/cba/success.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php echo $this->__('SUCCESS') ?>
-<h3><?php echo $this->__('Your order has been received') ?></h3>
+<h3><?php echo $this->__('Your order has been received.') ?></h3>
 </div>
 <p><strong><?php echo $this->__('Thank you for your purchase!') ?></strong></p>
 <p><?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?></p>
