MAGETWO-826 Update from Magento 1 (Sprint 26-2) More Magento 1/2 incompatibilities fixed: - obsolete code - relocated api.php entry point into pub/api.php and restored area constant - refined legacy tests with suggestions and less obfuscated error messages

--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view/addtocartbottom.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view/addtocartbottom.phtml
@@ -16,5 +16,5 @@
         <?php endif; ?>
     </div>
     <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><?php echo $buttonTitle ?></button>
-    <?php echo $this->getChildHtml('', true, true) ?>
+    <?php echo $this->getChildHtml('', true) ?>
 <?php endif; ?>
