--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view/options/wrapper/bottom.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view/options/wrapper/bottom.phtml
@@ -12,5 +12,5 @@
     <?php if ($this->hasRequiredOptions()):?>
         <p class="required"><?php echo $this->__('* Required Fields') ?></p>
     <?php endif;?>
-    <?php echo $this->getChildHtml('', true, true);?>
+    <?php echo $this->getChildHtml('', true);?>
 </div>
