--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view/options/wrapper.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view/options/wrapper.phtml
@@ -7,5 +7,5 @@
  */
 ?>
 <div class="product-options" id="product-options-wrapper">
-    <?php echo $this->getChildHtml('', true, true);?>
+    <?php echo $this->getChildHtml('', true);?>
 </div>
