--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view/options/wrapper/bottom.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view/options/wrapper/bottom.phtml
@@ -10,5 +10,5 @@
     <?php if ($this->hasRequiredOptions()):?>
         <p class="required"><?php echo $this->__('* Required Fields') ?></p>
     <?php endif;?>
-    <?php echo $this->getChildHtml('', true, true);?>
+    <?php echo $this->getChildHtml('', true);?>
 </div>
