--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -67,13 +67,16 @@
                 <?php endif; ?>
             </div>
             <div class="product-collateral">
-                <?php foreach ($this->getChildGroup('detailed_info', 'getChildHtml') as $alias => $html):?>
-                        <div class="box-collateral <?php echo "box-{$alias}"?>">
-                            <?php if ($title = $this->getChildData($alias, 'title')):?>
-                            <h2><?php echo $this->escapeHtml($title); ?></h2>
-                            <?php endif;?>
-                            <?php echo $html; ?>
-                        </div>
+                <?php foreach ($this->getGroupChildNames('detailed_info') as $name):?>
+                    <?php $html = $layout->renderElement($name); ?>
+                    <?php if (!$html) continue; ?>
+                    <?php $alias = $layout->getElementAlias($name); ?>
+                    <div class="box-collateral <?php echo "box-{$alias}"?>">
+                        <?php if ($title = $this->getChildData($alias, 'title')):?>
+                        <h2><?php echo $this->escapeHtml($title); ?></h2>
+                        <?php endif;?>
+                        <?php echo $html; ?>
+                    </div>
                 <?php endforeach;?>
             </div>
             <?php echo $this->getChildHtml('giftcard_form'); ?>
