Fixed MAGE-6760: My Credit Cards tab in My Account is absent [PE]

--- a/app/design/frontend/pro/default/layout/pbridge.xml
+++ b/app/design/frontend/pro/default/layout/pbridge.xml
@@ -49,4 +49,17 @@
         <block type="enterprise_pbridge/checkout_payment_result" name="pbridge.checkout.payment.result" template="pbridge/checkout/payment/result.phtml" output="toHtml" />
     </enterprise_pbridge_pbridge_result>
 
+    <enterprise_pbridge_payment_profile_index>
+        <update handle="customer_account" />
+        <reference name="my.account.wrapper">
+            <block type="enterprise_pbridge/payment_profile" name="pbridge.payment.profile" template="pbridge/payment/profile.phtml" />
+        </reference>
+    </enterprise_pbridge_payment_profile_index>
+
+    <customer_account>
+        <reference name="customer_account_navigation">
+            <action method="addLink" translate="label" module="enterprise_pbridge" ifconfig="payment/pbridge/profilestatus"><name>pbridge_payment_profile</name><path>enterprise_pbridge/payment_profile/</path><label>My Credit Cards</label></action>
+        </reference>
+    </customer_account>
+
 </layout>
