MAGETWO-826 Update from Magento 1 (Sprint 26-2) - Magento 1/2 incompatibilities - Fixed rogue change in DB adapter that caused incorrect default value for   table columns

--- a/app/code/core/Mage/OAuth/view/email/token.html
+++ b/app/code/core/Mage/OAuth/view/email/token.html
@@ -8,10 +8,10 @@ Available vars in this template:
 Use vars: {{var var_name}}
 *}<!--@subject Welcome, {{var name}} @-->
 <!--@vars
-{"htmlescape var=$userName":"User name",
+{"escapehtml var=$userName":"User name",
 "var $applicationName":"Application name",
 "var $status":"Token new status"}
 @-->
 
-Hello, {{htmlescape var=$userName}}<br /><br />
-Your authorization to <b>{{htmlescape var=$applicationName}}</b> has been changed to <b>{{htmlescape var=$status}}</b> by Admin team.<br /><br />
+Hello, {{escapehtml var=$userName}}<br /><br />
+Your authorization to <b>{{escapehtml var=$applicationName}}</b> has been changed to <b>{{escapehtml var=$status}}</b> by Admin team.<br /><br />
