Fixed MAGE-6777: Non Well-Formed HTML in enterprise/iphone Theme

--- a/app/design/frontend/enterprise/iphone/template/giftregistry/wishlist/view.phtml
+++ b/app/design/frontend/enterprise/iphone/template/giftregistry/wishlist/view.phtml
@@ -99,7 +99,7 @@
                         <a href="#">Remove All</a>
                     </li>
                     <li>
-                        <button class="btn-share" type="submit" title="<?php echo $this->__('Share Wishlist') ?>" onclick="this.name='save_and_share'"><?php echo $this->__('Share') ?></span>
+                        <button class="btn-share" type="submit" title="<?php echo $this->__('Share Wishlist') ?>" onclick="this.name='save_and_share'"><?php echo $this->__('Share') ?></button>
                     </li>
                     <?php if($this->isSaleable()):?>
                     <li>
