--- a/app/design/frontend/enterprise/iphone/template/page/html/pager.phtml
+++ b/app/design/frontend/enterprise/iphone/template/page/html/pager.phtml
@@ -75,7 +75,7 @@
 
             <?php foreach ($this->getFramePages() as $_page): ?>
                 <?php if ($this->isPageCurrent($_page)): ?>
-                    <option value="" class="current" selected="selected"><?php echo $_page ?></li>
+                    <option value="" class="current" selected="selected"><?php echo $_page ?></option>
                 <?php else: ?>
                     <option value="<?php echo $this->getPageUrl($_page) ?>"><?php echo $_page ?></option>
                 <?php endif;?>
