Fixed MAGETWO-843: Magento Core and Github Update (28-1) - reverted renaming OAuth in comments, strings and PHPDoc

--- a/app/code/core/Mage/Oauth/view/adminhtml/authorize/head-simple.phtml
+++ b/app/code/core/Mage/Oauth/view/adminhtml/authorize/head-simple.phtml
@@ -9,7 +9,7 @@
  */
 
 /**
- * Head block Oauth simple pages
+ * Head block OAuth simple pages
  *
  * @var $this Mage_Adminhtml_Block_Page_Head
  */
