Fixed MAGE-6390: Typo on View Invitation page (Customers>Invitations)

--- a/app/design/adminhtml/default/default/template/enterprise/invitation/view/tab/general.phtml
+++ b/app/design/adminhtml/default/default/template/enterprise/invitation/view/tab/general.phtml
@@ -99,7 +99,7 @@
                 </strong></td>
             </tr>
             <tr>
-                <td class="label"><label><?php  echo $this->helper('enterprise_invitation')->__('Invitation Url'); ?></label></td>
+                <td class="label"><label><?php  echo $this->helper('enterprise_invitation')->__('Invitation URL'); ?></label></td>
                 <td>
                     <strong>
                     <?php if ($url = $this->getInvitationUrl()): ?>
