CR Changes MAGE-6847: Mobile Theme Release(CE 1.7, EE 1.12 )

--- a/app/design/frontend/enterprise/iphone/layout/customer.xml
+++ b/app/design/frontend/enterprise/iphone/layout/customer.xml
@@ -20,7 +20,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     enterprise_default
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://www.magentocommerce.com/license/enterprise-edition
  */
@@ -78,7 +78,6 @@ Load this update on every page when customer is logged out
         <reference name="account.links">
             <action method="addLink" translate="label title" module="customer"><label>Log In</label><url helper="customer/getLoginUrl"/><title>Log In</title><prepare/><urlParams/><position>1</position></action>
             <action method="removeLinkByUrl" ifconfig="enterprise_invitation/general/registration_required_invitation"><url helper="customer/getRegisterUrl" /></action>
-            <!-- <action method="addLink" translate="label title" module="customer"><label>register</label><url helper="customer/getRegisterUrl" /><title>register</title><prepare/><urlParams/><position>100</position><li/><a/><before_text> or </before_text><after_text>.</after_text></action> -->
         </reference>
         <remove name="reorder"></remove>
     </customer_logged_out>
@@ -133,7 +132,6 @@ New customer registration
         </reference>
         <block type="page/html_wrapper" name="customer.form.register.fields.before" translate="label">
             <label>Form Fields Before</label>
-            <!--action method="setMayBeInvisible"><value>1</value></action-->
             <action method="setElementClass"><value>rewards</value></action>
         </block>
         <block type="enterprise_customer/form" template="customer/form/userattributes.phtml" name="customer_form_user_attributes">
@@ -167,7 +165,6 @@ New customer registration
             <action method="setHeaderTitle" translate="title" module="customer"><title>Password forgotten</title></action>
         </reference>
         <reference name="content">
-            <!--<block type="core/template" name="forgotPassword" template="customer/form/forgotpassword.phtml"/>-->
             <block type="customer/account_forgotpassword" name="forgotPassword" template="customer/form/forgotpassword.phtml" />
         </reference>
     </customer_account_forgotpassword>
