--- a/app/design/frontend/enterprise/iphone/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/enterprise/iphone/template/checkout/cart/item/default.phtml
@@ -19,7 +19,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     base_default
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
@@ -28,9 +28,10 @@
 $_item = $this->getItem();
 $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
 $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage_Catalog_Model_Product_Attribute_Source_Msrp_Type::TYPE_BEFORE_ORDER_CONFIRM);
+$messages = $this->getMessages();
 ?>
 
-<?php if ($messages = $this->getMessages()): ?>
+<?php if ($messages): ?>
 <tr class="messages">
     <td colspan="2">
         <?php foreach ($messages as $message): ?>
