--- a/app/design/frontend/enterprise/iphone/layout/tag.xml
+++ b/app/design/frontend/enterprise/iphone/layout/tag.xml
@@ -20,7 +20,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     default_iphone
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
@@ -61,20 +61,6 @@ Customer account home dashboard layout
             <block type="tag/customer_recent" name="customer_account_dashboard_info2" as="info2" template="tag/customer/recent.phtml"/>
         </reference>
     </customer_account_index>
-
-    <!--
-    <catalog_product_view translate="label">
-        <label>Catalog Product View</label>
-        <reference name="product.info.additional">
-            <block type="tag/product_list" name="product_tag_list" before="-" template="tag/list.phtml">
-                <block type="page/html_wrapper" name="product.tag.list.list.before" as="list_before" translate="label">
-                    <label>Tags List Before</label>
-                    <action method="setMayBeInvisible"><value>1</value></action>
-                </block>
-            </block>
-        </reference>
-    </catalog_product_view>
-    -->
 
 <!--
 All tags page
