--- a/app/design/frontend/enterprise/iphone/template/catalog/layer/view.phtml
+++ b/app/design/frontend/enterprise/iphone/template/catalog/layer/view.phtml
@@ -19,7 +19,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     enterprise_default
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://www.magentocommerce.com/license/enterprise-edition
  */
@@ -28,7 +28,6 @@
 /**
  * Category layered navigation
  *
- * @deprecated since 1.12.0.0
  */
 ?>
 <?php if($this->canShowBlock()): ?>
