--- a/app/design/frontend/enterprise/iphone/template/checkout/cart.phtml
+++ b/app/design/frontend/enterprise/iphone/template/checkout/cart.phtml
@@ -19,7 +19,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     enterprise_default
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://www.magentocommerce.com/license/enterprise-edition
  */
@@ -31,12 +31,13 @@
  * @see Mage_Checkout_Block_Cart
  */
 ?>
+<?php $methodHtml = $this->getMethodHtml($method) ?>
 <div class="cart">
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php if(!$this->hasError() && count($this->getItems()) > 1): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('methods') as $method): ?>
-            <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
+            <?php if ($methodHtml): ?>
             <li><?php echo $methodHtml; ?></li>
             <?php endif; ?>
         <?php endforeach; ?>
@@ -81,7 +82,7 @@
     <?php if(!$this->hasError()): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('methods') as $method): ?>
-            <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
+            <?php if ($methodHtml): ?>
             <li><?php echo $methodHtml; ?></li>
             <?php endif; ?>
         <?php endforeach; ?>
