--- a/app/design/frontend/enterprise/iphone/template/downloadable/checkout/cart/item/default.phtml
+++ b/app/design/frontend/enterprise/iphone/template/downloadable/checkout/cart/item/default.phtml
@@ -19,7 +19,7 @@
  * needs please refer to http://www.magentocommerce.com for more information.
  *
  * @category    design
- * @package     base_default
+ * @package     enterprise_iphone
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
@@ -27,8 +27,10 @@
 <?php
     $_item = $this->getItem();
     $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage_Catalog_Model_Product_Attribute_Source_Msrp_Type::TYPE_BEFORE_ORDER_CONFIRM);
+    $messages = $this->getMessages();
+    $_options = $this->getOptionList()
 ?>
-<?php if ($messages = $this->getMessages()): ?>
+<?php if ($messages): ?>
 <tr class="messages">
     <td colspan="2">
         <?php foreach ($messages as $message): ?>
@@ -277,7 +279,7 @@
 
     </td>
 </tr>
-<?php if ($_options = $this->getOptionList()):?>
+<?php if ($_options):?>
 <tr class="product-options">
     <td colspan="2">
         <span class="toggle" onclick="$(this).next().toggle(); return false;">Show Options</span>
