--- a/app/design/frontend/enterprise/iphone/template/checkout/cart.phtml
+++ b/app/design/frontend/enterprise/iphone/template/checkout/cart.phtml
@@ -31,12 +31,12 @@
  * @see Mage_Checkout_Block_Cart
  */
 ?>
-<?php $methodHtml = $this->getMethodHtml($method) ?>
 <div class="cart">
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php if(!$this->hasError() && count($this->getItems()) > 1): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('methods') as $method): ?>
+            <?php $methodHtml = $this->getMethodHtml($method); ?>
             <?php if ($methodHtml): ?>
             <li><?php echo $methodHtml; ?></li>
             <?php endif; ?>
@@ -82,6 +82,7 @@
     <?php if(!$this->hasError()): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('methods') as $method): ?>
+            <?php $methodHtml = $this->getMethodHtml($method); ?>
             <?php if ($methodHtml): ?>
             <li><?php echo $methodHtml; ?></li>
             <?php endif; ?>
